# Rng-Simulator

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/commands/: inventory.rs  mod.rs  ping.rs  roll.rs  start.rs
src/utils/: database.rs  mod.rs  rng.rs
