[package]
name = "rng-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
fastrand = "1.9.0"
poise = "0.5.5"
postcard = { version = "1.0.4", features = ["alloc"] }
serde = "1.0.163"
tokio = { version = "1.28.1", features = ["full"] }
